# common-lib

./: .gitmodules  CMakeLists.txt
.github/workflows/: build-linux-amd64.yml
cmake/: CommonLib.cmake
common/: CMakeLists.txt
common/include/common/: CommonHeader.hpp  ErrorCode.hpp  Exception.hpp  Factory.hpp  Logger.hpp  NonCopyable.hpp  Observer.hpp  Singleton.hpp
common/include/common/asio/: AsyncEventBroker.hpp  AsyncEventTransport.hpp  AsyncTcp.hpp  AsyncUdp.hpp  IOContext.hpp
common/include/common/communication/: Event.hpp  EventFrame.hpp  EventTransport.hpp  Message.hpp  Socket.hpp
common/include/common/communication/impl/: EventPublisher.ipp  EventSubscriber.ipp
common/include/common/communication/proxy/: GenericEvent.hpp
common/include/common/communication/serial/: BaseSerial.hpp  Uart.hpp
common/include/common/container/: LockFreeWorkQueue.hpp
common/include/common/lifecycle/: Application.h  Resource.hpp
common/include/common/threading/: Runnable.hpp  TaskExecutor.hpp  Thread.hpp  Timer.hpp
common/include/common/utils/: Misc.hpp  String.hpp
common/src/: Logger.cpp  Singleton.cpp
common/src/asio/: AsyncEventBroker.cpp  AsyncEventTransport.cpp  AsyncTcp.cpp  AsyncUdp.cpp
common/src/communication/: Event.cpp  Socket.cpp
common/src/communication/serial/: Uart.cpp
common/src/threading/: Timer.cpp
common/test/: CMakeLists.txt
common/test/application/: CMakeLists.txt
common/test/include/: mock_Serial.hpp
common/test/src/: test_main.cpp
common/test/src/common-lib/: test_Observer.cpp
common/test/src/common-lib/asio/: test_AsyncTcp.cpp  test_AsyncUdp.cpp
common/test/src/common-lib/communication/: test_Event.cpp  test_Message.cpp
common/test/src/common-lib/communication/proxy/: test_GenericEvent.cpp
common/test/src/common-lib/communication/serial/: test_Uart.cpp
common/test/src/common-lib/lifecycle/: test_Resource.cpp
extension/: CMakeLists.txt
extension/ch341/: CMakeLists.txt
extension/ch341/include/common/extension/ch341/: CH341.hpp
extension/ch341/src/: CH341.cpp
extension/math/include/common/extension/math/: angle.hpp  constant.hpp  matrix.hpp
extension/math/include/common/extension/math/filter/: KalmanFilter.hpp  LowPassFilter.hpp
extension/math/src/: angle.cpp
include/: CommonHeader.hpp
include/common/: Exception.hpp  Factory.hpp  Logger.hpp  NonCopyable.hpp  Observer.hpp  Singleton.hpp
include/common/communication/: Event.hpp  Message.hpp  Serial.hpp  Socket.hpp
include/common/communication/driver/: BaseDriver.hpp  CH341.hpp  I2C.hpp  SPI.hpp  Uart.hpp
include/common/communication/proxy/: GenericEvent.hpp
include/common/communication/serial/: CH341.hpp  Uart.hpp
include/common/container/: DoublingBuffer.hpp  WorkQueue.hpp
include/common/lifecycle/: Application.h  Resource.hpp
include/common/logging/: Logger.hpp
include/common/misc/: Utils.hpp
include/common/proxy/: GenericEvent.hpp
include/common/thread/: Runnable.hpp  TaskExecutor.hpp  Thread.hpp  Timer.hpp
include/common/threading/: Runnable.hpp  TaskExecutor.hpp  Thread.hpp  Timer.hpp
include/common/utils/: Misc.hpp  String.hpp
include/math/: angle.hpp  constant.hpp  matrix.hpp
include/math/filter/: KalmanFilter.hpp  LowPassFilter.hpp
libs/: CMakeLists.txt
libs/flatbuffers/: CMakeLists.txt
python/: Binding.cpp
src/common/communication/: Event.cpp  Serial.cpp  Socket.cpp
src/common/communication/driver/: CH341.cpp  Uart.cpp
src/common/communication/serial/: CH341.cpp
src/common/lifecycle/: Application.cpp  Resource.cpp
src/common/logging/: Logger.cpp
src/common/misc/: Utils.cpp
src/common/thread/: TaskExecutor.cpp  Thread.cpp  Timer.cpp
src/common/threading/: Thread.cpp
src/common/utils/: Misc.cpp  String.cpp
src/math/: angle.cpp
test/: CMakeLists.txt
test/application/src/: main.cpp
test/include/: mock_Serial.hpp
test/schema/: TestDataTypes.fbs
test/src/common-lib/communication/: test_Event.cpp  test_Message.cpp  test_Serial.cpp  test_Socket.cpp
test/src/common-lib/communication/driver/: test_CH341.cpp
test/src/common-lib/communication/serial/: test_Uart.cpp
test/src/common-lib/container/: test_DoublingBuffer.cpp
test/src/common-lib/proxy/: test_GenericEvent.cpp
test/src/common-lib/thread/: test_Runnable.cpp  test_TaskExecutor.cpp  test_Thread.cpp  test_Timer.cpp
test/src/common-lib/threading/: test_Runnable.cpp  test_TaskExecutor.cpp  test_Thread.cpp  test_Timer.cpp
